Fix cut off text on table

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -76,6 +76,7 @@ th,
 td {
   width: auto;
   overflow: hidden;
+  word-wrap: break-word;
   padding: 8px;
   text-align: left;
 }
